--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ Flask==1.0.2
 urllib3==1.23
 requests==2.19.1
 APScheduler==3.6.0
+praw==6.2.0
+prawcore==1.0.1
+update-checker==0.16
+websocket-client==0.56.0
