Testing json errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 uwsgi
-psycopg2==2.7.1
+#psycopg2==2.7.1
 twilio==6.16.4
 Flask==1.0.3
-urllib3>=1.24.2
-requests>=2.20.0
+urllib3==1.24.1
+requests==2.21.0
 APScheduler==3.6.0
 praw==6.2.0
 prawcore==1.0.1
@@ -15,3 +15,4 @@ opencv-python-headless==4.1.0.25
 #tensorflow==1.13.1
 #Keras==2.2.4
 pycricbuzz==2.4
+jsonschema==2.6.0
