--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,5 @@ numpy==1.16.2
 opencv-python-headless==4.1.0.25
 #tensorflow==1.13.1
 #Keras==2.2.4
-pycricbuzz==2.4
+#pycricbuzz==2.4
 jsonschema==2.6.0
