--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 uwsgi
-#psycopg2==2.7.1
+Flask-SQLAlchemy==2.4.0
+psycopg2==2.7.1
 twilio==6.16.4
 Flask==1.0.3
 urllib3>=1.24.1
@@ -10,7 +11,7 @@ prawcore==1.0.1
 update-checker==0.16
 websocket-client==0.56.0
 pyimgur==0.6.0
-numpy==1.16.2
+#numpy==1.16.2
 #opencv-python-headless==4.1.0.25
 #tensorflow==1.13.1
 #Keras==2.2.4
