--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,11 @@ prawcore==1.0.1
 update-checker==0.16
 websocket-client==0.56.0
 pyimgur==0.6.0
-#numpy==1.16.2
+numpy==1.16.2
+pandas==0.24.2
+matplotlib==3.0.2
+seaborn==0.9.0
+
 #opencv-python-headless==4.1.0.25
 #tensorflow==1.13.1
 #Keras==2.2.4
